--- a/src/components/crystal/styles/CrystalDark.css
+++ b/src/components/crystal/styles/CrystalDark.css
@@ -1,6 +1,7 @@
 /* BACKGROUND */
 #darkStripes, #darkStripes span {
   position: absolute;
+  display: inline-block;
 }
 
 #darkStripes {
